# Maya

./: LICENSE  README.md  gradle.properties
.github/workflows/: Maya Apk Oluştur.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/llama/: AppUpdater.kt  CharacterAdapter.kt  ConversationAdapter.kt  DailyReportAlarmReceiver.kt  DailyReportScheduler.kt  DailyReportWorker.kt  MainActivity.kt  MainActivityBackup.kt  MainActivityCharacter.kt  MainActivityChat.kt  MainActivityDailyReport.kt  MainActivityDreamApi.kt  MainActivityMayagram.kt  MainActivityModel.kt  MainActivitySearch.kt  MainActivitySettings.kt  MainActivityTemplates.kt  MainActivityUI.kt  MainActivityUserProfile.kt  MainActivityWebSearch.kt  MayaForegroundService.kt  MayagramActivity.kt  MayagramAutoPostReceiver.kt  MayagramAutoPostScheduler.kt  MayagramAutoPostWorker.kt  MayagramCommentAdapter.kt  MayagramFeedAdapter.kt  MayagramPost.kt  MessageAdapter.kt  ReportProfile.kt  TavernCardParser.kt  UserProfile.kt  WebSearchUtil.kt  ZoomableImageView.kt
app/src/main/java/com/example/llama/data/: AppDatabase.kt  ChatDao.kt  Entities.kt  MayagramDao.kt
app/src/main/res/drawable/: bg_assistant_message.xml  bg_scope_toggle.xml  bg_user_message.xml  ic_menu_hamburger.xml
app/src/main/res/drawable-night/: bg_assistant_message.xml  bg_user_message.xml
app/src/main/res/layout/: activity_main.xml  activity_mayagram.xml  activity_search.xml  dialog_fullscreen_image.xml  item_character.xml  item_conversation.xml  item_mayagram_comment.xml  item_mayagram_post.xml  item_message_assistant.xml  item_message_user.xml  item_search_result.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml  network_security_config.xml
gradle/: libs.versions.toml
kova-maya-dev/.github/workflows/: apk_oluştur.yml  imzaliapk.yml
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
lib/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
